// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestTokens.vue Only class="test" removed 1`] = `
<ul id="tokens" class="tokens token">
  <li data-server-rendered="true">
    data-server-rendered="true"
  </li>
  <li data-test="data-test">
    data-test="token"
  </li>
  <li data-testid="data-testid">
    data-testid="token"
  </li>
  <li data-test-id="data-test-id">
    data-test-id="token"
  </li>
  <li data-qa="data-qa">
    data-qa="token"
  </li>
  <li id="test">
    id="test"
  </li>
  <li id="testId">
    id="testId"
  </li>
  <li id="test-id">
    id="test-id"
  </li>
  <li>
    class="test"
  </li>
  <li>
    class="testToken"
  </li>
  <li>
    class="test-token"
  </li>
  <li>
    class="test-token testToken test"
  </li>
  <li class="active">
    class="test active"
  </li>
  <li class>
    class=""
  </li>
</ul>
`;

exports[`TestTokens.vue Only data-qa removed 1`] = `
<ul id="tokens" class="tokens token">
  <li data-server-rendered="true">
    data-server-rendered="true"
  </li>
  <li data-test="data-test">
    data-test="token"
  </li>
  <li data-testid="data-testid">
    data-testid="token"
  </li>
  <li data-test-id="data-test-id">
    data-test-id="token"
  </li>
  <li>
    data-qa="token"
  </li>
  <li id="test">
    id="test"
  </li>
  <li id="testId">
    id="testId"
  </li>
  <li id="test-id">
    id="test-id"
  </li>
  <li class="test">
    class="test"
  </li>
  <li class="testToken">
    class="testToken"
  </li>
  <li class="test-token">
    class="test-token"
  </li>
  <li class="test-token testToken test">
    class="test-token testToken test"
  </li>
  <li class="test active">
    class="test active"
  </li>
  <li class>
    class=""
  </li>
</ul>
`;

exports[`TestTokens.vue Only data-server-rendered removed 1`] = `
<ul id="tokens" class="tokens token">
  <li>
    data-server-rendered="true"
  </li>
  <li data-test="data-test">
    data-test="token"
  </li>
  <li data-testid="data-testid">
    data-testid="token"
  </li>
  <li data-test-id="data-test-id">
    data-test-id="token"
  </li>
  <li data-qa="data-qa">
    data-qa="token"
  </li>
  <li id="test">
    id="test"
  </li>
  <li id="testId">
    id="testId"
  </li>
  <li id="test-id">
    id="test-id"
  </li>
  <li class="test">
    class="test"
  </li>
  <li class="testToken">
    class="testToken"
  </li>
  <li class="test-token">
    class="test-token"
  </li>
  <li class="test-token testToken test">
    class="test-token testToken test"
  </li>
  <li class="test active">
    class="test active"
  </li>
  <li class>
    class=""
  </li>
</ul>
`;

exports[`TestTokens.vue Only data-test removed 1`] = `
<ul id="tokens" class="tokens token">
  <li data-server-rendered="true">
    data-server-rendered="true"
  </li>
  <li>
    data-test="token"
  </li>
  <li data-testid="data-testid">
    data-testid="token"
  </li>
  <li data-test-id="data-test-id">
    data-test-id="token"
  </li>
  <li data-qa="data-qa">
    data-qa="token"
  </li>
  <li id="test">
    id="test"
  </li>
  <li id="testId">
    id="testId"
  </li>
  <li id="test-id">
    id="test-id"
  </li>
  <li class="test">
    class="test"
  </li>
  <li class="testToken">
    class="testToken"
  </li>
  <li class="test-token">
    class="test-token"
  </li>
  <li class="test-token testToken test">
    class="test-token testToken test"
  </li>
  <li class="test active">
    class="test active"
  </li>
  <li class>
    class=""
  </li>
</ul>
`;

exports[`TestTokens.vue Only data-test-id removed 1`] = `
<ul id="tokens" class="tokens token">
  <li data-server-rendered="true">
    data-server-rendered="true"
  </li>
  <li data-test="data-test">
    data-test="token"
  </li>
  <li data-testid="data-testid">
    data-testid="token"
  </li>
  <li>
    data-test-id="token"
  </li>
  <li data-qa="data-qa">
    data-qa="token"
  </li>
  <li id="test">
    id="test"
  </li>
  <li id="testId">
    id="testId"
  </li>
  <li id="test-id">
    id="test-id"
  </li>
  <li class="test">
    class="test"
  </li>
  <li class="testToken">
    class="testToken"
  </li>
  <li class="test-token">
    class="test-token"
  </li>
  <li class="test-token testToken test">
    class="test-token testToken test"
  </li>
  <li class="test active">
    class="test active"
  </li>
  <li class>
    class=""
  </li>
</ul>
`;

exports[`TestTokens.vue Only data-testid removed 1`] = `
<ul id="tokens" class="tokens token">
  <li data-server-rendered="true">
    data-server-rendered="true"
  </li>
  <li data-test="data-test">
    data-test="token"
  </li>
  <li>
    data-testid="token"
  </li>
  <li data-test-id="data-test-id">
    data-test-id="token"
  </li>
  <li data-qa="data-qa">
    data-qa="token"
  </li>
  <li id="test">
    id="test"
  </li>
  <li id="testId">
    id="testId"
  </li>
  <li id="test-id">
    id="test-id"
  </li>
  <li class="test">
    class="test"
  </li>
  <li class="testToken">
    class="testToken"
  </li>
  <li class="test-token">
    class="test-token"
  </li>
  <li class="test-token testToken test">
    class="test-token testToken test"
  </li>
  <li class="test active">
    class="test active"
  </li>
  <li class>
    class=""
  </li>
</ul>
`;

exports[`TestTokens.vue Only id="test" removed 1`] = `
<ul id="tokens" class="tokens token">
  <li data-server-rendered="true">
    data-server-rendered="true"
  </li>
  <li data-test="data-test">
    data-test="token"
  </li>
  <li data-testid="data-testid">
    data-testid="token"
  </li>
  <li data-test-id="data-test-id">
    data-test-id="token"
  </li>
  <li data-qa="data-qa">
    data-qa="token"
  </li>
  <li>
    id="test"
  </li>
  <li>
    id="testId"
  </li>
  <li>
    id="test-id"
  </li>
  <li class="test">
    class="test"
  </li>
  <li class="testToken">
    class="testToken"
  </li>
  <li class="test-token">
    class="test-token"
  </li>
  <li class="test-token testToken test">
    class="test-token testToken test"
  </li>
  <li class="test active">
    class="test active"
  </li>
  <li class>
    class=""
  </li>
</ul>
`;

exports[`TestTokens.vue Remove data-server-rendered, data-test, data-testid, data-test-id by default 1`] = `
<ul id="tokens" class="tokens token">
  <li>
    data-server-rendered="true"
  </li>
  <li>
    data-test="token"
  </li>
  <li>
    data-testid="token"
  </li>
  <li>
    data-test-id="token"
  </li>
  <li data-qa="data-qa">
    data-qa="token"
  </li>
  <li id="test">
    id="test"
  </li>
  <li id="testId">
    id="testId"
  </li>
  <li id="test-id">
    id="test-id"
  </li>
  <li class="test">
    class="test"
  </li>
  <li class="testToken">
    class="testToken"
  </li>
  <li class="test-token">
    class="test-token"
  </li>
  <li class="test-token testToken test">
    class="test-token testToken test"
  </li>
  <li class="test active">
    class="test active"
  </li>
  <li class>
    class=""
  </li>
</ul>
`;
